--- a/forum/styles/Default/style.css
+++ b/forum/styles/Default/style.css
@@ -1095,4 +1095,5 @@ a {
 
 .image_resize_icon {
     padding: 5px;
+    vertical-align: middle;
 }
