--- a/forum/styles/make_style.css
+++ b/forum/styles/make_style.css
@@ -1203,4 +1203,5 @@ a {
 
 .image_resize_icon {
     padding: 5px;
+    vertical-align: middle;
 }
