--- a/forum/styles/tehforum/style.css
+++ b/forum/styles/tehforum/style.css
@@ -1097,4 +1097,5 @@ a {
 
 .image_resize_icon {
     padding: 5px;
+    vertical-align: middle;
 }
